<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_blue"
        android:text="@string/current_temperature"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Temperature_tv"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/xxx"
        android:gravity="center"
        android:textSize="18sp" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:background="@drawable/text_border_yellow"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/current_location"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginTop="380dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/xxx" />
    <Button
        android:id="@+id/modify_button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="@string/modify_temperature"
        android:layout_marginStart="3dp"
        android:layout_alignParentBottom="true"
        />
    <Button
        android:id="@+id/monitor_button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="3dp"
        android:text="@string/start_monitor"
        />
</RelativeLayout>